# shelves.pb.go
@@ -6,6 +6,7 @@ package shelves
 import proto "github.com/golang/protobuf/proto"
 import fmt "fmt"
 import math "math"
+import _ "github.com/golang/protobuf/ptypes/empty"
 import _ "google.golang.org/genproto/googleapis/api/annotations"
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -18,6 +19,153 @@ var _ = math.Inf
 // A compilation error at this line likely means your copy of the
 // proto package needs to be updated.
 const _ = proto.ProtoPackageIsVersion2 // please upgrade the proto package
+
+type ListBooksRequest struct {
+	// The parent resource name, for example, "shelves/shelf1".
+	Parent string `protobuf:"bytes,1,opt,name=parent" json:"parent,omitempty"`
+	// The maximum number of items to return.
+	PageSize int32 `protobuf:"varint,2,opt,name=page_size,json=pageSize" json:"page_size,omitempty"`
+	// The next_page_token value returned from a previous List request, if any.
+	PageToken            string   `protobuf:"bytes,3,opt,name=page_token,json=pageToken" json:"page_token,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *ListBooksRequest) Reset()         { *m = ListBooksRequest{} }
+func (m *ListBooksRequest) String() string { return proto.CompactTextString(m) }
+func (*ListBooksRequest) ProtoMessage()    {}
+func (*ListBooksRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_shelves_71a9670e50f54733, []int{0}
+}
+func (m *ListBooksRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_ListBooksRequest.Unmarshal(m, b)
+}
+func (m *ListBooksRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_ListBooksRequest.Marshal(b, m, deterministic)
+}
+func (dst *ListBooksRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_ListBooksRequest.Merge(dst, src)
+}
+func (m *ListBooksRequest) XXX_Size() int {
+	return xxx_messageInfo_ListBooksRequest.Size(m)
+}
+func (m *ListBooksRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_ListBooksRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_ListBooksRequest proto.InternalMessageInfo
+
+func (m *ListBooksRequest) GetParent() string {
+	if m != nil {
+		return m.Parent
+	}
+	return ""
+}
+
+func (m *ListBooksRequest) GetPageSize() int32 {
+	if m != nil {
+		return m.PageSize
+	}
+	return 0
+}
+
+func (m *ListBooksRequest) GetPageToken() string {
+	if m != nil {
+		return m.PageToken
+	}
+	return ""
+}
+
+type ListBooksResponse struct {
+	// The field name should match the noun "books" in the method name.  There
+	// will be a maximum number of items returned based on the page_size field
+	// in the request.
+	Books []*Book `protobuf:"bytes,1,rep,name=books" json:"books,omitempty"`
+	// Token to retrieve the next page of results, or empty if there are no
+	// more results in the list.
+	NextPageToken        string   `protobuf:"bytes,2,opt,name=next_page_token,json=nextPageToken" json:"next_page_token,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *ListBooksResponse) Reset()         { *m = ListBooksResponse{} }
+func (m *ListBooksResponse) String() string { return proto.CompactTextString(m) }
+func (*ListBooksResponse) ProtoMessage()    {}
+func (*ListBooksResponse) Descriptor() ([]byte, []int) {
+	return fileDescriptor_shelves_71a9670e50f54733, []int{1}
+}
+func (m *ListBooksResponse) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_ListBooksResponse.Unmarshal(m, b)
+}
+func (m *ListBooksResponse) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_ListBooksResponse.Marshal(b, m, deterministic)
+}
+func (dst *ListBooksResponse) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_ListBooksResponse.Merge(dst, src)
+}
+func (m *ListBooksResponse) XXX_Size() int {
+	return xxx_messageInfo_ListBooksResponse.Size(m)
+}
+func (m *ListBooksResponse) XXX_DiscardUnknown() {
+	xxx_messageInfo_ListBooksResponse.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_ListBooksResponse proto.InternalMessageInfo
+
+func (m *ListBooksResponse) GetBooks() []*Book {
+	if m != nil {
+		return m.Books
+	}
+	return nil
+}
+
+func (m *ListBooksResponse) GetNextPageToken() string {
+	if m != nil {
+		return m.NextPageToken
+	}
+	return ""
+}
+
+type UpdateBookRequest struct {
+	// The book resource which replaces the resource on the server.
+	Book                 *Book    `protobuf:"bytes,1,opt,name=book" json:"book,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *UpdateBookRequest) Reset()         { *m = UpdateBookRequest{} }
+func (m *UpdateBookRequest) String() string { return proto.CompactTextString(m) }
+func (*UpdateBookRequest) ProtoMessage()    {}
+func (*UpdateBookRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_shelves_71a9670e50f54733, []int{2}
+}
+func (m *UpdateBookRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_UpdateBookRequest.Unmarshal(m, b)
+}
+func (m *UpdateBookRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_UpdateBookRequest.Marshal(b, m, deterministic)
+}
+func (dst *UpdateBookRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_UpdateBookRequest.Merge(dst, src)
+}
+func (m *UpdateBookRequest) XXX_Size() int {
+	return xxx_messageInfo_UpdateBookRequest.Size(m)
+}
+func (m *UpdateBookRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_UpdateBookRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_UpdateBookRequest proto.InternalMessageInfo
+
+func (m *UpdateBookRequest) GetBook() *Book {
+	if m != nil {
+		return m.Book
+	}
+	return nil
+}
 
 type Book struct {
 	// Resource name of the book. It must have the format of "shelves/*/books/*".
@@ -32,7 +180,7 @@ func (m *Book) Reset()         { *m = Book{} }
 func (m *Book) String() string { return proto.CompactTextString(m) }
 func (*Book) ProtoMessage()    {}
 func (*Book) Descriptor() ([]byte, []int) {
-	return fileDescriptor_shelves_d686884ddfcdc99f, []int{0}
+	return fileDescriptor_shelves_71a9670e50f54733, []int{3}
 }
 func (m *Book) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_Book.Unmarshal(m, b)
@@ -71,7 +219,7 @@ func (m *GetBookRequest) Reset()         { *m = GetBookRequest{} }
 func (m *GetBookRequest) String() string { return proto.CompactTextString(m) }
 func (*GetBookRequest) ProtoMessage()    {}
 func (*GetBookRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_shelves_d686884ddfcdc99f, []int{1}
+	return fileDescriptor_shelves_71a9670e50f54733, []int{4}
 }
 func (m *GetBookRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_GetBookRequest.Unmarshal(m, b)
@@ -113,7 +261,7 @@ func (m *CreateBookRequest) Reset()         { *m = CreateBookRequest{} }
 func (m *CreateBookRequest) String() string { return proto.CompactTextString(m) }
 func (*CreateBookRequest) ProtoMessage()    {}
 func (*CreateBookRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_shelves_d686884ddfcdc99f, []int{2}
+	return fileDescriptor_shelves_71a9670e50f54733, []int{5}
 }
 func (m *CreateBookRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_CreateBookRequest.Unmarshal(m, b)
@@ -147,31 +295,88 @@ func (m *CreateBookRequest) GetBook() *Book {
 	return nil
 }
 
+type DeleteBookRequest struct {
+	// The resource name of the book to be deleted, for example:
+	// "shelves/shelf1/books/book2"
+	Name                 string   `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *DeleteBookRequest) Reset()         { *m = DeleteBookRequest{} }
+func (m *DeleteBookRequest) String() string { return proto.CompactTextString(m) }
+func (*DeleteBookRequest) ProtoMessage()    {}
+func (*DeleteBookRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_shelves_71a9670e50f54733, []int{6}
+}
+func (m *DeleteBookRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_DeleteBookRequest.Unmarshal(m, b)
+}
+func (m *DeleteBookRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_DeleteBookRequest.Marshal(b, m, deterministic)
+}
+func (dst *DeleteBookRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_DeleteBookRequest.Merge(dst, src)
+}
+func (m *DeleteBookRequest) XXX_Size() int {
+	return xxx_messageInfo_DeleteBookRequest.Size(m)
+}
+func (m *DeleteBookRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_DeleteBookRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_DeleteBookRequest proto.InternalMessageInfo
+
+func (m *DeleteBookRequest) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
 func init() {
+	proto.RegisterType((*ListBooksRequest)(nil), "shelves.ListBooksRequest")
+	proto.RegisterType((*ListBooksResponse)(nil), "shelves.ListBooksResponse")
+	proto.RegisterType((*UpdateBookRequest)(nil), "shelves.UpdateBookRequest")
 	proto.RegisterType((*Book)(nil), "shelves.Book")
 	proto.RegisterType((*GetBookRequest)(nil), "shelves.GetBookRequest")
 	proto.RegisterType((*CreateBookRequest)(nil), "shelves.CreateBookRequest")
+	proto.RegisterType((*DeleteBookRequest)(nil), "shelves.DeleteBookRequest")
 }
 
-func init() { proto.RegisterFile("shelves.proto", fileDescriptor_shelves_d686884ddfcdc99f) }
+func init() { proto.RegisterFile("shelves.proto", fileDescriptor_shelves_71a9670e50f54733) }
 
-var fileDescriptor_shelves_d686884ddfcdc99f = []byte{
-	// 261 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0xe2, 0x2d, 0xce, 0x48, 0xcd,
-	0x29, 0x4b, 0x2d, 0xd6, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0x62, 0x87, 0x72, 0xa5, 0x64, 0xd2,
-	0xf3, 0xf3, 0xd3, 0x73, 0x52, 0xf5, 0x13, 0x0b, 0x32, 0xf5, 0x13, 0xf3, 0xf2, 0xf2, 0x4b, 0x12,
-	0x4b, 0x32, 0xf3, 0xf3, 0xa0, 0xca, 0x94, 0xa4, 0xb8, 0x58, 0x9c, 0xf2, 0xf3, 0xb3, 0x85, 0x84,
-	0xb8, 0x58, 0xf2, 0x12, 0x73, 0x53, 0x25, 0x18, 0x15, 0x18, 0x35, 0x38, 0x83, 0xc0, 0x6c, 0x25,
-	0x15, 0x2e, 0x3e, 0xf7, 0xd4, 0x12, 0x90, 0x74, 0x50, 0x6a, 0x61, 0x69, 0x6a, 0x71, 0x09, 0x56,
-	0x55, 0x7e, 0x5c, 0x82, 0xce, 0x45, 0xa9, 0x89, 0x25, 0xa9, 0xc8, 0x0a, 0xc5, 0xb8, 0xd8, 0x0a,
-	0x12, 0x8b, 0x52, 0xf3, 0x4a, 0xa0, 0x4a, 0xa1, 0x3c, 0x21, 0x45, 0x2e, 0x96, 0xa4, 0xfc, 0xfc,
-	0x6c, 0x09, 0x26, 0x05, 0x46, 0x0d, 0x6e, 0x23, 0x5e, 0x3d, 0x98, 0x9b, 0xc1, 0x7a, 0xc1, 0x52,
-	0x46, 0xe7, 0x18, 0xb9, 0xf8, 0x7c, 0x32, 0x93, 0x8a, 0x12, 0x8b, 0x2a, 0x83, 0x53, 0x8b, 0xca,
-	0x32, 0x93, 0x53, 0x85, 0xc2, 0xb9, 0xd8, 0xa1, 0x0e, 0x11, 0x12, 0x87, 0x6b, 0x41, 0x75, 0x9a,
-	0x14, 0xaa, 0x59, 0x4a, 0x2a, 0x4d, 0x97, 0x9f, 0x4c, 0x66, 0x92, 0x13, 0x92, 0xd1, 0x2f, 0x33,
-	0xd4, 0xaf, 0x06, 0x39, 0xd4, 0x16, 0x2a, 0xaf, 0xaf, 0xa5, 0x0f, 0xb2, 0xa7, 0x58, 0x5f, 0xab,
-	0x56, 0x28, 0x99, 0x8b, 0x0b, 0xe1, 0x76, 0x21, 0x29, 0xb8, 0x11, 0x18, 0x1e, 0x42, 0x37, 0x5e,
-	0x0b, 0x6c, 0xbc, 0x8a, 0x12, 0xc4, 0x78, 0x88, 0xe7, 0x10, 0x16, 0xd4, 0x42, 0x6c, 0xb0, 0x02,
-	0x7b, 0x28, 0x89, 0x0d, 0x1c, 0xd2, 0xc6, 0x80, 0x00, 0x00, 0x00, 0xff, 0xff, 0xf4, 0x33, 0xf2,
-	0x17, 0xa1, 0x01, 0x00, 0x00,
+var fileDescriptor_shelves_71a9670e50f54733 = []byte{
+	// 470 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x53, 0xcd, 0x6e, 0xd3, 0x40,
+	0x10, 0x26, 0x3f, 0x6d, 0xc9, 0xa0, 0x14, 0x32, 0x87, 0x12, 0xdc, 0x82, 0x52, 0x13, 0x41, 0xc8,
+	0xc1, 0x2b, 0x82, 0xc4, 0x01, 0x89, 0x0b, 0x14, 0x71, 0xa9, 0x10, 0x4a, 0x41, 0x1c, 0xcb, 0xa6,
+	0x4c, 0x52, 0xab, 0xe9, 0xae, 0xf1, 0x6e, 0x23, 0x5a, 0xd4, 0x0b, 0xaf, 0xc0, 0xa3, 0xf1, 0x0a,
+	0x88, 0xe7, 0x40, 0xbb, 0x5e, 0xff, 0xc4, 0x4e, 0x7a, 0xf3, 0xcc, 0x37, 0xfb, 0x7d, 0x33, 0xdf,
+	0x78, 0xa0, 0xad, 0x4e, 0x69, 0xbe, 0x20, 0x15, 0x44, 0xb1, 0xd4, 0x12, 0xb7, 0x5c, 0xe8, 0xed,
+	0xcd, 0xa4, 0x9c, 0xcd, 0x89, 0xf1, 0x28, 0x64, 0x5c, 0x08, 0xa9, 0xb9, 0x0e, 0xa5, 0x70, 0x65,
+	0xde, 0xae, 0x43, 0x6d, 0x34, 0xb9, 0x98, 0x32, 0x3a, 0x8f, 0xf4, 0x65, 0x02, 0xfa, 0x53, 0xb8,
+	0x77, 0x18, 0x2a, 0xfd, 0x46, 0xca, 0x33, 0x35, 0xa6, 0xef, 0x17, 0xa4, 0x34, 0xee, 0xc0, 0x66,
+	0xc4, 0x63, 0x12, 0xba, 0x5b, 0xeb, 0xd5, 0x06, 0xad, 0xb1, 0x8b, 0x70, 0x17, 0x5a, 0x11, 0x9f,
+	0xd1, 0xb1, 0x0a, 0xaf, 0xa8, 0x5b, 0xef, 0xd5, 0x06, 0x1b, 0xe3, 0xdb, 0x26, 0x71, 0x14, 0x5e,
+	0x11, 0x3e, 0x04, 0xb0, 0xa0, 0x96, 0x67, 0x24, 0xba, 0x0d, 0xfb, 0xd0, 0x96, 0x7f, 0x32, 0x09,
+	0xff, 0x2b, 0x74, 0x0a, 0x3a, 0x2a, 0x92, 0x42, 0x11, 0x3e, 0x86, 0x8d, 0x89, 0x49, 0x74, 0x6b,
+	0xbd, 0xc6, 0xe0, 0xce, 0xa8, 0x1d, 0xa4, 0xf3, 0x99, 0xb2, 0x71, 0x82, 0xe1, 0x13, 0xb8, 0x2b,
+	0xe8, 0x87, 0x3e, 0x2e, 0xb0, 0xd7, 0x2d, 0x7b, 0xdb, 0xa4, 0x3f, 0x66, 0x0a, 0x2f, 0xa1, 0xf3,
+	0x39, 0xfa, 0xc6, 0x35, 0xd9, 0xc7, 0x6e, 0x94, 0x7d, 0x68, 0x1a, 0x16, 0x3b, 0x48, 0x45, 0xc0,
+	0x42, 0xbe, 0x07, 0x4d, 0x13, 0x21, 0x42, 0x53, 0xf0, 0x73, 0x72, 0x33, 0xdb, 0x6f, 0xbf, 0x0f,
+	0xdb, 0xef, 0x49, 0x17, 0x09, 0x57, 0x55, 0x7d, 0x80, 0xce, 0xdb, 0x98, 0x4a, 0xca, 0xeb, 0x4c,
+	0x4c, 0x3b, 0xaa, 0xaf, 0xef, 0xe8, 0x29, 0x74, 0x0e, 0x68, 0x4e, 0xcb, 0x7c, 0x2b, 0x84, 0x47,
+	0xff, 0x1a, 0xb0, 0x7d, 0x18, 0x4e, 0x62, 0x1e, 0x5f, 0x1e, 0x51, 0xbc, 0x08, 0x4f, 0x08, 0x0f,
+	0xa0, 0x95, 0xf9, 0x8c, 0x0f, 0x32, 0xf6, 0xf2, 0x8e, 0x3d, 0x6f, 0x15, 0x94, 0xac, 0xc5, 0xbf,
+	0x85, 0x5f, 0x60, 0xcb, 0xcd, 0x8d, 0xf7, 0xb3, 0xc2, 0x65, 0x27, 0xbc, 0xe5, 0xd6, 0xfd, 0xfe,
+	0xaf, 0x3f, 0x7f, 0x7f, 0xd7, 0x1f, 0xe1, 0x1e, 0x5b, 0x3c, 0x67, 0x3f, 0x4d, 0x7b, 0xaf, 0x1d,
+	0xce, 0x86, 0xcc, 0x6e, 0x92, 0x0d, 0xaf, 0xf1, 0x04, 0x20, 0xb7, 0x0a, 0xf3, 0x26, 0x2a, 0xfe,
+	0x95, 0xe9, 0x87, 0x96, 0xbe, 0xef, 0x27, 0xf4, 0x89, 0x97, 0xb9, 0xc0, 0x75, 0xa2, 0xf0, 0xca,
+	0xfa, 0x87, 0xa7, 0x00, 0xf9, 0x9f, 0x50, 0x10, 0xa9, 0xfc, 0x1e, 0x65, 0x11, 0x66, 0x45, 0x9e,
+	0x8d, 0xf6, 0xad, 0x88, 0xe1, 0x0a, 0xd6, 0x0c, 0xe2, 0x94, 0xa6, 0x00, 0xf9, 0xa6, 0x0a, 0x4a,
+	0x95, 0xf5, 0x79, 0x3b, 0x41, 0x72, 0x85, 0x41, 0x7a, 0x85, 0xc1, 0x3b, 0x73, 0x85, 0xa9, 0x6d,
+	0xc3, 0x1b, 0x6d, 0x9b, 0x6c, 0xda, 0x57, 0x2f, 0xfe, 0x07, 0x00, 0x00, 0xff, 0xff, 0xd6, 0xdb,
+	0x94, 0x2f, 0x01, 0x04, 0x00, 0x00,
 }
